[package]
name = "fpl_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
fpl_data = { version = "0.1.0", path = "../fpl_data" }
approx = "0.5"
chrono = "0.4.38"
